vbnc/vbnc/tests/Errors/30480-3.vb
'Author:
'   V. Sudharsan (vsudharsan@novell.com)
'
' (C) 2005 Novell, Inc.

'To Prove Constructors can be overloaded

Imports System

Class A
    Protected Friend Shared Sub New()
    End Sub
End Class

Module Test
    Public Sub Main()
    End Sub
End Module

